# maestro

./: .gitignore  ARCHITECTURE.md  CONSTITUTION.md  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  check.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: default.toml
src-tauri/src/: agent_state.rs  api_provider.rs  cli_main.rs  cli_state.rs  config.rs  constants.rs  conversation.rs  engine.rs  execution_binding.rs  execution_binding_repository.rs  file_watcher.rs  headless.rs  i18n.rs  ipc.rs  lib.rs  main.rs  memory.rs  process.rs  profile_snapshot.rs  project.rs  pty.rs  redact.rs  run_persistence.rs  safety.rs  scoped_fs.rs  snapshot_repository.rs  spec.rs  task_commands.rs  task_lifecycle.rs  task_migration.rs  task_repository.rs  task_runtime.rs  task_runtime_service.rs  task_state.rs  telemetry.rs  workflow.rs  workspace_commands.rs  workspace_io.rs
src-tauri/src/agent_state/: emitter.rs  mod.rs  payloads.rs  registry.rs
src-tauri/src/api_provider/: anthropic.rs  mod.rs  openai.rs  sse.rs  sse_util.rs
src-tauri/src/config/: keyring.rs  migration.rs  mod.rs  roles.rs  verify.rs
src-tauri/src/core/: completion_enforcer.rs  engine_app_service.rs  error.rs  events.rs  execution.rs  execution_app_service.rs  harness_app_service.rs  mod.rs  pty_app_service.rs  pty_spawn_guard.rs  spec_app_service.rs  task_app_service.rs  task_switch_transaction.rs  vision_app_service.rs  voice_app_service.rs  workflow_app_service.rs
src-tauri/src/core/harness/: mod.rs  (+2 more)
src-tauri/src/engine/: config.rs  legacy.rs  mod.rs  models.rs  preflight.rs  runtime.rs  utils.rs
src-tauri/src/engines/: claude.rs  cursor.rs  gemini.rs  mod.rs
src-tauri/src/infra/: file_watcher.rs  mod.rs  project.rs  workspace_commands.rs  workspace_io.rs
src-tauri/src/legacy/: mod.rs  profile_snapshot.rs
src-tauri/src/mcp/: client.rs  mod.rs  service.rs
src-tauri/src/plugin_engine/: action_guard.rs  api_chat_runner.rs  cli_chat_runner.rs  cli_output_forwarder.rs  cli_verification.rs  control_frame.rs  maestro_engine.rs  mod.rs
src-tauri/src/storage/: conversation.rs  execution_binding.rs  execution_binding_repository.rs  knowledge_service.rs  memory.rs  memory_commands.rs  mod.rs  run_persistence.rs  snapshot_repository.rs
src-tauri/src/task/: commands.rs  lifecycle.rs  mod.rs  queue.rs  repository.rs  runtime.rs  runtime_service.rs  state.rs
src-tauri/src/tools/: builtin.rs  harness_tools.rs  mcp_proxy.rs  mod.rs  registry.rs  sandbox.rs
src-tauri/src/workflow/: archive.rs  chat.rs  commands.rs  context_manager.rs  execution_lifecycle.rs  harness.rs  history.rs  mod.rs  protocol.rs  run.rs  step_executor.rs  types.rs  util.rs  verification_parser.rs
(+186 files in other folders)
