[package]
name = "maestro"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
sysinfo = "0.33"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "fs", "process", "time"] }
tokio-util = "0.7"
strip-ansi-escapes = "0.2"
regex = "1"
which = "7"
tauri-plugin-dialog = "2.6.0"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-fs = "2.4.5"
dirs = "6.0.0"
clap = { version = "4.6.0", features = ["derive"] }
shlex = "1.3.0"
keyring = "3.6.3"
uuid = { version = "1.22.0", features = ["v4"] }
thiserror = "2.0.18"
rusqlite = { version = "0.32", features = ["bundled"] }
once_cell = "1.20"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.14"

